<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical">


    <include
        android:id="@+id/headerID"
        layout="@layout/header"></include>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_below="@id/headerID"
        android:layout_marginBottom="20dp"
        android:scrollbars="none"
        android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="5dp"
        android:background="@color/light_grey_back"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_marginBottom="30dp"
            android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/Services_we"
            android:textColor="@color/title_font"
            android:textSize="25sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray"></View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Services_detail"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="10dp"
                android:background="@drawable/circulardot"
                android:layout_gravity="center"
                android:layout_height="10dp">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan1"
                android:layout_marginLeft="10dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="10dp"
                android:background="@drawable/circulardot"
                android:layout_gravity="center"
                android:layout_height="10dp">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan2"
                android:layout_marginLeft="10dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="10dp"
                android:background="@drawable/circulardot"
                android:layout_gravity="center"
                android:layout_height="10dp">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan3"
                android:layout_marginLeft="10dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="10dp"
                android:background="@drawable/circulardot"
                android:layout_gravity="center"
                android:layout_height="10dp">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan4"
                android:layout_marginLeft="10dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="10dp"
                android:background="@drawable/circulardot"
                android:layout_gravity="center"
                android:layout_height="10dp">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan5"
                android:layout_marginLeft="10dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="10dp"
                android:background="@drawable/circulardot"
                android:layout_gravity="center"
                android:layout_height="10dp">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan6"
                android:layout_marginLeft="10dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="10dp"
                android:background="@drawable/circulardot"
                android:layout_gravity="center"
                android:layout_height="10dp">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan7"
                android:layout_marginLeft="10dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="10dp"
                android:background="@drawable/circulardot"
                android:layout_gravity="center"
                android:layout_height="10dp">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan8"
                android:layout_marginLeft="10dp"
                />

        </LinearLayout>

        <Button
            android:id="@+id/maxusFinancialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:layout_gravity="center"
            android:text="@string/finance_app"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"
            />


        <Button
            android:id="@+id/maxusGetaConsulationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:layout_gravity="center"
            android:text="GET A CONSULTATION"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>
    </LinearLayout>
    </ScrollView>
    <include
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/menuHomeID"
        layout="@layout/menu_top"
        android:layout_marginTop="65dp"
        >
    </include>
</RelativeLayout>