<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical">

    <include
        android:id="@+id/headerID"
        layout="@layout/header"></include>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/headerID"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="5dp"
        android:background="@color/light_grey_back"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="70dp"
                android:text="Thank You!"
                android:textColor="@color/title_font"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/enquiry"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/number"
                android:textColor="@color/app_background"
                android:textSize="35sp"
                />

            <Button
                android:text="@string/finance_app"
                android:id="@+id/viewFinancilApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:background="@drawable/rounded_button"
                android:layout_gravity="center_horizontal"
                />


            <Button
                android:text="BACK TO HOME PAGE"
                android:id="@+id/gotoHomePageId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:background="@drawable/rounded_button"
                android:layout_gravity="center_horizontal"
                />

        </LinearLayout>
    </LinearLayout>
    <include
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/menuHomeID"
        layout="@layout/menu_top"
        android:layout_marginTop="65dp"
        >
    </include>
</RelativeLayout>